# scikit-rt

./: .buildinfo  .gitignore  .gitlab-ci.yml  Dockerfile  PLANNED_ADDITIONS.md  README.html  README.md  demos.html  docker.html  environment.yml  environment_dev.yml  examples.html  genindex.html  gitlab-ci.yml  image_registration.html  images.html  import_analysis.html  import_analysis.patient.html  import_analysis.roi_names.html  import_analysis.viewer.html  import_analysis_modules.html  import_modules.html  index.html  installation.html  keyboard_shortcuts.html  kubernetes.html  legacy.html  modules.html  objects.inv  patients_and_studies.html  py-modindex.html  pypi.md  pyproject.toml  registration.html  search.html  searchindex.js  setup.cfg  setup.py  setup_dev.cfg  simulation.html  (+34 more)
.github/workflows/: docker.yml  macos.yml  pypi.yml  sphinx.yml  windows.yml
_downloads/cd2df2821756f2e3042dc580d6f70b63/: Dockerfile
_sources/: README.md.txt  demos.md.txt  docker.md.txt  examples.md.txt  import_analysis.patient.rst.txt  import_analysis.roi_names.rst.txt  import_analysis.rst.txt  import_analysis.viewer.rst.txt  import_analysis_modules.rst.txt  index.rst.txt  installation.md.txt  keyboard_shortcuts.md.txt  kubernetes.md.txt  legacy.md.txt  patients_and_studies.md.txt  registration.md.txt  simulation.md.txt  skrt.application.rst.txt  skrt.better_viewer.options.rst.txt  skrt.better_viewer.rst.txt  skrt.core.rst.txt  skrt.dicom_writer.rst.txt  skrt.dose.rst.txt  skrt.image.rst.txt  skrt.multi.rst.txt  skrt.patient.rst.txt  skrt.registration.rst.txt  skrt.rst.txt  skrt.segmentation.rst.txt  skrt.simulation.rst.txt  skrt.structures.rst.txt  skrt.viewer.core.rst.txt  skrt.viewer.rst.txt  skrt.viewer.viewer.rst.txt  structures.md.txt  support.md.txt  usage.md.txt  voxtox.core.rst.txt  voxtox.data.djn_253.rst.txt  voxtox.data.jes_109.rst.txt  (+8 more)
_static/: documentation_options.js
doc/: image.md  image_registration.md  patient.md  structures.md  synthetic_images.md
doc/html/: README.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  skrt.better_viewer.html  skrt.html  skrt.viewer.html
doc/html/_sources/: README.md.txt
doc/html/doc/: image_registration.html
doc/sphinx/source/: conf.py  index.rst  skrt.better_viewer.rst  skrt.rst
docs/: demos.md  github_sphinx.sh  image_registration.md  installation.md  legacy.md  pre_build.sh  registration.md  requirements.txt  sphinx.sh  support.md
docs/markdown/: docker.md  examples.md  images.md  installation.md  patients_and_studies.md  registration.md  simulation.md  structures.md  usage.md
docs/source/: README.md  conf.py  index.rst  modules.rst
examples/application/: analysis_application.py  copy_dicom.py  root_application.py  simple_application.py
examples/casscade/notebooks/: cardiac_substructures.ipynb  registration.ipynb
examples/casscade/roi_transform/: roi_transform.py
examples/casscade/segmentation/: sas_evaluation.py  segmentation.py
examples/elastix/parameter_files/: MI_BSpline10.txt  MI_BSpline15.txt  MI_BSpline20.txt  MI_BSpline25.txt  MI_BSpline35.txt  MI_Rigid.txt  MSD_Affine.txt  MSD_BSpline10.txt  MSD_BSpline15.txt  MSD_BSpline20.txt  MSD_BSpline25.txt  MSD_BSpline30.txt  MSD_Translation.txt  NCC_Affine.txt  NCC_BSpline10.txt  NCC_BSpline15.txt  NCC_BSpline20.txt  NCC_BSpline25.txt  NCC_BSpline30.txt  NCC_Rigid.txt  NCC_Translation.txt  NMI_Affine.txt  NMI_BSpline10.txt  NMI_BSpline15.txt  NMI_BSpline20.txt  NMI_BSpline25.txt  NMI_BSpline30.txt  (+2 more)
examples/import/: setup.cfg
examples/import/examples/roi_transform/: roi_transform.py  transform.py
examples/import/notebooks/: registration.ipynb  spatial_mapping.ipynb
examples/import/src/import_analysis/: __init__.py  patient.py  roi_names.py  viewer.py
examples/innereye/: setup.cfg
examples/notebooks/: application_demo.ipynb  bed.ipynb  crowdsourced_segmentations.ipynb  dose_volume_rois.ipynb  eqd.ipynb  grid_creation.ipynb  image_processing.ipynb  image_registration_checks.ipynb  kvct_to_mvct.ipynb  mean_heart_dose.ipynb  mean_heart_dose2.ipynb  mean_heart_dose5.ipynb  patient_datasets.ipynb  plotting_demo.ipynb  roi_algebra.ipynb  roi_comparison.ipynb  roi_intensities.ipynb  roi_resizing.ipynb  rtplan.ipynb  run_notebooks.py  synthetic_dicom_dataset.ipynb  workshop_19_01_22.ipynb  workshop_26_09_22.ipynb
examples/osairis/: compare_structure_sets.py
examples/pet++/: pet_nii_to_dcm.py
examples/voxtox/: setup.cfg
examples/voxtox/examples/contour_analysis/: contour_analysis.py
examples/voxtox/examples/extract_info/: extract_info.py
examples/voxtox/examples/innereye_outputs/: inner_eye_outputs.py
examples/voxtox/examples/nifti_datasets/: catalogue_nifti_dataset.py  create_nifti_dataset.py
examples/voxtox/examples/notebooks/: innereye_outputs.ipynb
examples/voxtox/examples/roi_names/: README.md  data_ct.py  data_djn.py  data_jes.py  data_mvct.py  get_roi_names.py  sort_head_and_neck.py  sort_prostate.py  sort_rois.py
examples/voxtox/src/voxtox/: __init__.py  core.py  structures.py
examples/voxtox/src/voxtox/data/: __init__.py  djn_253.py  jes_109.py
examples/voxtox/src/voxtox/roi_names/: __init__.py  head_and_neck_roi_names.py  prostate_roi_names.py
examples/voxtox/tests/: test_core.py  test_image.py  test_structs.py  test_voxtox.py
skrt/: __init__.py  registration.py  simulation.py
src/skrt/: :w  __init__.py  application.py  core.py  dicom_writer.py  dose.py  image.py  multi.py  patient.py  reg2.py  registration.py  segmentation.py  simulation.py  structures.py
tests/: conftest.py  test.py  test_01_setup.py  test_1.py  test_application.py  test_core.py  test_dose.py  test_image.py  test_multi.py  test_patient.py  test_quickviewer.py  test_qv_image.py  test_qv_quickviewer.py  test_qv_struct_loader.py  test_qv_struct_metrics.py  test_qv_structs.py  test_registration.py  test_roi_metrics.py  test_segmentation.py  test_simulation.py  test_struct_metrics.py  test_structs.py  test_synthetic_image.py  test_tmp.py  test_viewer.py
tests/pfiles/: MI_Translation.txt  MSD_Rigid.txt
(+30 files in other folders)
