[metadata]
name = scikit-rt
version = 0.3.8
author = Hannah Pullen, Karl Harrison
author_email = scikit-rt@hep.phy.cam.ac.uk
description = Toolkit for radiotherapy image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-rt/scikit-rt
project_urls = 
    Bug Tracker = https://github.com/scikit-rt/scikit-rt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
test_suite = tests
install_requires = 
    ipywidgets
    jupyter
    mahotas
    matplotlib
    nibabel
    numpy
    pandas
    pydicom>=2.1.2
    python-gdcm
    pytest
    scikit-image>=0.19.0
    shapely

[options.packages.find]
where = src

[options.package_data]
* = data/*/*.txt
