[metadata]
name = scikit-rt
version = 0.4.8
author = H. Pullen, K. Harrison
author_email = scikit-rt@hep.phy.cam.ac.uk
description = Toolkit for analysis of radiotherapy data
long_description = file: pypi.md
long_description_content_type = text/markdown
url = https://github.com/scikit-rt/scikit-rt
project_urls = 
    Bug Tracker = https://github.com/scikit-rt/scikit-rt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
test_suite = tests
install_requires = 
  MarkupSafe==2.1.1
  PyWavelets==1.3.0
  Send2Trash==1.8.0
  SimpleITK==2.1.1.2
  anyio==3.6.1
  appnope==0.1.3
  argon2-cffi==21.3.0
  argon2-cffi-bindings==21.2.0
  asttokens==2.0.7
  attrs==22.1.0
  babel==2.10.3
  backcall==0.2.0
  beautifulsoup4==4.11.1
  bleach==5.0.1
  cffi==1.15.1
  charset-normalizer==2.1.0
  cycler==0.11.0
  debugpy==1.6.2
  decorator==5.1.1
  defusedxml==0.7.1
  entrypoints==0.4
  executing==0.9.1
  fastjsonschema==2.16.1
  fonttools==4.34.4
  idna==3.3
  imageio==2.21.1
  importlib-metadata==4.12.0
  importlib-resources==5.9.0
  iniconfig==1.1.1
  ipykernel==6.15.1
  ipython==8.4.0
  ipython-genutils==0.2.0
  ipywidgets==7.7.1
  #jedi==0.18.1
  jedi==0.17.2
  jinja2==3.0.3
  json5==0.9.9
  jsonschema==4.9.1
  jupyter==1.0.0
  jupyter-client==7.3.4
  jupyter-console==6.4.4
  jupyter-core==4.11.1
  jupyter-server==1.18.1
  jupyterlab==3.4.5
  jupyterlab-pygments==0.2.2
  jupyterlab-server==2.15.0
  jupyterlab-widgets==1.1.1
  kiwisolver==1.4.4
  lxml==4.9.1
  mahotas==1.4.13
  matplotlib==3.5.2
  matplotlib-inline==0.1.3
  mistune==0.8.4
  nbclassic==0.4.3
  nbclient==0.6.6
  nbconvert==6.5.2
  nbformat==5.4.0
  nest-asyncio==1.5.5
  networkx==2.8.5
  nibabel==4.0.1
  notebook==6.4.12
  notebook-shim==0.1.0
  numpy==1.23.1
  packaging==21.3
  pandas==1.4.3
  pandocfilters==1.5.0
  #parso==0.8.3
  parso==0.7.1
  pexpect==4.8.0
  pickleshare==0.7.5
  pillow==9.2.0
  pkgutil-resolve-name==1.3.10
  pluggy==1.0.0
  prometheus-client==0.14.1
  prompt-toolkit==3.0.30
  psutil==5.9.1
  ptyprocess==0.7.0
  pure-eval==0.2.2
  py==1.11.0
  pycparser==2.21
  pydicom==2.3.0
  pygments==2.12.0
  pyparsing==3.0.9
  pyrsistent==0.18.1
  pytest==7.1.2
  python-dateutil==2.8.2
  python-gdcm==3.0.14
  pytz==2022.1
  pyzmq==23.2.0
  qtconsole==5.3.1
  qtpy==2.2.0
  requests==2.28.1
  scikit-image==0.19.3
  scipy==1.9.0
  shapely==1.8.2
  six==1.16.0
  sniffio==1.2.0
  soupsieve==2.3.2.post1
  stack-data==0.3.0
  terminado==0.15.0
  tifffile==2022.8.8
  tinycss2==1.1.1
  tomli==2.0.1
  tornado==6.2
  traitlets==5.3.0
  urllib3==1.26.11
  wcwidth==0.2.5
  webencodings==0.5.1
  websocket-client==1.3.3
  widgetsnbextension==3.6.1
  zipp==3.8.1

[options.packages.find]
where = src

[options.package_data]
* = data/*/*.txt
