[metadata]
name = scikit-rt
version = 0.8.2
author = H. Pullen, K. Harrison
author_email = scikit-rt@hep.phy.cam.ac.uk
description = Toolkit for analysis of radiotherapy data
long_description = file: pypi.md
long_description_content_type = text/markdown
url = https://github.com/scikit-rt/scikit-rt
project_urls = 
    Bug Tracker = https://github.com/scikit-rt/scikit-rt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
test_suite = tests
install_requires = 
  ipywidgets
  jupyterlab
  matplotlib
  nibabel
  pandas
  pydicom
  pytest
  scikit-image
  scipy
  shapely
  tomli
  tomli_w
[options.packages.find]
where = src

[options.package_data]
* = data/*/*.txt
