[metadata]
name = import
version = 0.0.1
author = K. Harrison
description = Extensions to scikit-rt for analysis of IMPORT data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-rt/scikit-rt
project_urls = 
    Bug Tracker = https://github.com/scikit-rt/scikit-rt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
test_suite = tests
#install_requires = 
#    scikit-rt

[options.packages.find]
where = src
